@@ -86,9 +86,12 @@ CONF.MASTER_HOST = NO SYSTEM DEFAULT VALUE
 
 ##CONF.LOG_FILE = "/tmp/fairy/log"
 ##CONF.LOG_FLUSH_INTERVAL = 1
+##CONF.LOG_MARK_INTERVAL = 300
 ##CONF.LOG_LEVEL = :DEBUG
 ##CONF.LOG_IMPORT_NTIMES_POP = 100000
 ##CONF.LOG_LOCAL_OUTPUT_DEV = :$stderr
+##CONF.LOG_ROTATE_INTERVAL = 60*60*24
+##CONF.LOG_ROTATE_N = 7
 
 ##CONF.SUBCMD_EXEC_TIMEOUT = 60
 
