@@ -150,8 +150,11 @@ module Fairy
     def_prop :LOG_FILE
     def_prop :LOG_LEVEL
     def_prop :LOG_FLUSH_INTERVAL
+    def_prop :LOG_MARK_INTERVAL
     def_prop :LOG_IMPORT_NTIMES_POP
     def_prop :LOG_LOCAL_OUTPUT_DEV 
+    def_prop :LOG_ROTATE_INTERVAL
+    def_prop :LOG_ROTATE_N
 
     def_prop :SUBCMD_EXEC_TIMEOUT
 
@@ -336,9 +339,12 @@ module Fairy
 
   DEFAULT_CONF.LOG_FILE = "/tmp/fairy/log"
   DEFAULT_CONF.LOG_FLUSH_INTERVAL = 1
+  DEFAULT_CONF.LOG_MARK_INTERVAL = 300
   DEFAULT_CONF.LOG_LEVEL = :DEBUG
   DEFAULT_CONF.LOG_IMPORT_NTIMES_POP = 100000
   DEFAULT_CONF.LOG_LOCAL_OUTPUT_DEV = :$stderr
+  DEFAULT_CONF.LOG_ROTATE_INTERVAL = 60*60*24
+  DEFAULT_CONF.LOG_ROTATE_N = 7
 
   DEFAULT_CONF.SUBCMD_EXEC_TIMEOUT = 60
 
